<resources>
    <string name="app_name">MyTalks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_bar_talks">Talks</string>
    <string name="nav_bar_playlists">Playlists</string>
    <string name="nav_bar_podcasts">Podcasts</string>
    <string name="nav_bar_surprise">Surprise</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_login">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_login_title">Log in to your TED account</string>
    <string name="nav_header_login_notice">Sync My List, Likes, and History.</string>
    <string name="nav_bar_account">Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_language">Language</string>
    <string name="pref_actegory_notifications">Notifications</string>
    <string name="pref_category_new_talks">New talks</string>
    <string name="pref_category_new_talks_summary">Notify me when new talks are available.</string>
    <string name="pref_category_recom_talks">Recommended talks</string>
    <string name="pref_category_recom_talks_summary">Notify me of talks i may like.</string>
    <string name="pref_category_new_talks_key">pref_category_new_talks</string>
    <string name="pref_category_recom_talks_key">pref_category_recom_talks</string>
    <string name="pref_category_language">Language</string>
    <string name="pref_category_language_app_language">App language</string>
    <string name="pref_category_language_app_language_key">pref_category_language_app_language</string>
    <string name="general_background_playback_key">general_background_playback</string>
    <string name="pref_category_language_subtitle_language">Subtitle Language</string>
    <string name="pref_category_language_subtitle_language_key">pref_category_language_subtitle_language</string>
    <string name="pref_category_language_subtitle_language_titles" />
    <string name="pref_category_language_subtitle_language_values" />
    <string name="pref_category_downloads">Downloads</string>
    <string name="pref_category_downloads_add_over_wifi_only">Add over Wi-Fi only</string>
    <string name="pref_category_downloads_add_over_wifi_only_key">pref_category_downloads_add_over_wifi_only</string>
    <string name="pref_category_downloads_add_over_wifi_only_summary">Only download over Wi-Fi.</string>
    <string name="pref_category_downloads_quality">Quality</string>
    <string name="pref_category_downloads_quality_key">pref_category_downloads_quality</string>
    <string name="pref_category_downloads_quality_titles" />
    <string name="pref_category_downloads_quality_values" />
    <string name="pref_category_downloads_location">Save Location</string>
    <string name="pref_category_downloads_location_key">pref_category_downloads_location</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="pref_category_privacy_clear_watch_history">Clear watch history</string>
    <string name="pref_privacy_clr_watch_history_key">pref_privacy_clear_watch_history</string>
    <string name="pref_privacy_clear_watch_history_summary">Clear watch history from this device.</string>
    <string name="pref_privacy_clear_search_history">Clear search history</string>
    <string name="pref_privacy_clear_search_history_key">pref_category_privacy_clear_search_history</string>
    <string name="pref_privacy_clear_search_history_summary">Clear search history from this device.</string>
    <string name="pref_category_about">About</string>
    <string name="pref_about_licenses">Licenses</string>
    <string name="pref_about_licenses_key">pref_about_licenses</string>
    <string name="pref_about_licenses_summary">License detail for open source software.</string>
    <string name="pref_about_credits">Translation credits</string>
    <string name="pref_about_credits_key">pref_about_credits</string>
    <string name="pref_about_credits_summary">Credit details for talk translations.</string>
    <string name="pref_about_about_ted">About TED</string>
    <string name="pref_about_ted_key">pref_about_ted</string>
    <string name="pref_about_version">Build version</string>
    <string name="pref_about_version_key">pref_about_version</string>
    <string name="pref_about_version_summary">3.1.16</string>
    <string name="pref_mainscreen_key">pref_mainscreen</string>
    <string name="search_input_hint">Search TED Talks</string>
</resources>
