<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Old"
        >
        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_social_recommendations" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
    </PreferenceCategory>

    <PreferenceCategory android:title="General">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="limit_mobile_data_usage"
            android:summary="Only stream HD video on Wi-Fi."
            android:title="Limit mobile data usage" />

        <ListPreference
            android:entries="@array/general_background_playback_titles"
            android:entryValues="@array/general_background_playback_values"
            android:key="general_background_playback"
            android:title="Background playback" />
    </PreferenceCategory>

</PreferenceScreen>
